Create main website layout

--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
     <title>Weather</title>
 </head>
 <body>
-    
+    <div class="header">
+        <img src="./images/search.png" alt="" class="search-image">
+        <input type="text" class="search-bar">
+    </div>
+    <main class="content">
+        <h1>The current weather in Kraków is</h1>
+    </main>
+    <footer>
+        <img src="./images/github.png" alt="" id="footer-logo">
+        <a href="https://github.com/pequito193" target="_blank" class="footer-text">pequito193</a>
+    </footer>
 </body>
 </html>
