--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
                     <p class="wind">Wind: </p>
                 </div>
             </div>
+            <div class="clock">
+                <p class="date">Thursday, 22 Aug 2022</p>
+                <p class="hour">12:49</p>
+            </div>
         </div>
         <div class="bottom">
             <h1>Next days</h1>
