--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
     <main class="content">
         <div class="top">
-            <h1>The current weather in Kraków is</h1>
+            <h1 class="message">The current weather in Kraków, PL is</h1>
             <div class="info">
                 <div class="main-info">
                     <p class="temperature"> 18ºC </p>
