Fix API calls and display information

--- a/index.html
+++ b/index.html
@@ -30,9 +30,22 @@
                     <p class="weather">Sunny</p>
                 </div>
                 <div class="extra-info">
-                    <p class="humidity">Humidity: </p>
-                    <p class="feels-like">Feels like: </p>
-                    <p class="wind">Wind: </p>
+                    <div class="info-wrapper">
+                        <p class="humidity">Humidity: </p>
+                        <p class="humidity-value"></p>
+                    </div>
+                    <div class="info-wrapper">
+                        <p class="feels-like">Feels like: </p>
+                        <p class="feels-like-value"></p>
+                    </div>
+                    <div class="info-wrapper">
+                        <p class="wind">Wind: </p>
+                        <p class="wind-value"></p>
+                    </div>
+                    <div class="info-wrapper">
+                        <p class="pressure">Pressure: </p>
+                        <p class="pressure-value"></p>
+                    </div>
                 </div>
             </div>
             <div class="clock">
