Fix unit calculations

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             <h1 class="message">The current weather in Kraków, PL is</h1>
             <div class="info">
                 <div class="main-info">
-                    <p class="temperature"> 18ºC </p>
-                    <p class="weather">Sunny</p>
+                    <p class="temperature"></p>
+                    <p class="weather"></p>
                 </div>
                 <div class="extra-info">
                     <div class="info-wrapper">
