--- a/index.html
+++ b/index.html
@@ -24,37 +24,65 @@
     <main class="content">
         <div class="top">
             <h1 class="message">The current weather in Kraków, PL is</h1>
-            <div class="info">
-                <div class="main-info">
-                    <p class="temperature"></p>
-                    <p class="weather"></p>
+            <div class="content-wrapper">
+                <div class="info">
+                    <div class="main-info">
+                        <p class="temperature"></p>
+                        <p class="weather"></p>
+                    </div>
+                    <div class="extra-info">
+                        <div class="info-wrapper">
+                            <p class="humidity">Humidity: </p>
+                            <p class="humidity-value"></p>
+                        </div>
+                        <div class="info-wrapper">
+                            <p class="feels-like">Feels like: </p>
+                            <p class="feels-like-value"></p>
+                        </div>
+                        <div class="info-wrapper">
+                            <p class="wind">Wind: </p>
+                            <p class="wind-value"></p>
+                        </div>
+                        <div class="info-wrapper">
+                            <p class="rain">Rain: </p>
+                            <p class="rain-value"></p>
+                        </div>
+                    </div>
                 </div>
-                <div class="extra-info">
+                <div class="unimportant-info">
                     <div class="info-wrapper">
-                        <p class="humidity">Humidity: </p>
-                        <p class="humidity-value"></p>
+                        <p class="latitude">Latitude: </p>
+                        <p class="latitude-value"></p>
                     </div>
                     <div class="info-wrapper">
-                        <p class="feels-like">Feels like: </p>
-                        <p class="feels-like-value"></p>
+                        <p class="longitude">Longitude: </p>
+                        <p class="longitude-value"></p>
                     </div>
                     <div class="info-wrapper">
-                        <p class="wind">Wind: </p>
-                        <p class="wind-value"></p>
+                        <p class="sunrise">Sunrise: </p>
+                        <p class="sunrise-value"></p>
+                    </div>
+                    <div class="info-wrapper">
+                        <p class="sunset">Sunset: </p>
+                        <p class="sunset-value"></p>
+                    </div>
+                    <div class="info-wrapper">
+                        <p class="population">Population: </p>
+                        <p class="population-value"></p>
                     </div>
                     <div class="info-wrapper">
                         <p class="pressure">Pressure: </p>
                         <p class="pressure-value"></p>
                     </div>
                 </div>
-            </div>
-            <div class="clock">
-                <p class="date">Thursday, 22 Aug 2022</p>
-                <p class="hour">12:49</p>
+                <div class="clock">
+                    <p class="date">Thursday, 22 Aug 2022</p>
+                    <p class="hour">12:49</p>
+                </div>
             </div>
         </div>
         <div class="bottom">
-            <h1>Next days</h1>
+            <h1>Daily</h1>
         </div>
     </main>
 </body>
