--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
                     </div>
                 </div>
                 <div class="clock">
-                    <p class="date">Thursday, 22 Aug 2022</p>
-                    <p class="hour">12:49</p>
+                    <p class="date"></p>
+                    <p class="hour"></p>
                 </div>
             </div>
         </div>
