Add daily forecast

--- a/index.html
+++ b/index.html
@@ -83,6 +83,78 @@
         </div>
         <div class="bottom">
             <h1>Daily</h1>
+            <div class="next-days">
+                <div class="day1 day">
+                    <div class="left-day">
+                        <p class="week-day"></p>
+                        <img src="" alt="" class="sky">
+                    </div>
+                    <div class="right-day">
+                        <p class="max-temp"></p>
+                        <p class="min-temp"></p>
+                    </div>
+                </div>
+                <div class="day2 day">
+                    <div class="left-day">
+                        <p class="week-day"></p>
+                        <img src="" alt="" class="sky">
+                    </div>
+                    <div class="right-day">
+                        <p class="max-temp"></p>
+                        <p class="min-temp"></p>
+                    </div>
+                </div>
+                <div class="day3 day">
+                    <div class="left-day">
+                        <p class="week-day"></p>
+                        <img src="" alt="" class="sky">
+                    </div>
+                    <div class="right-day">
+                        <p class="max-temp"></p>
+                        <p class="min-temp"></p>
+                    </div>
+                </div>
+                <div class="day4 day">
+                    <div class="left-day">
+                        <p class="week-day"></p>
+                        <img src="" alt="" class="sky">
+                    </div>
+                    <div class="right-day">
+                        <p class="max-temp"></p>
+                        <p class="min-temp"></p>
+                    </div>
+                </div>
+                <div class="day5 day">
+                    <div class="left-day">
+                        <p class="week-day"></p>
+                        <img src="" alt="" class="sky">
+                    </div>
+                    <div class="right-day">
+                        <p class="max-temp"></p>
+                        <p class="min-temp"></p>
+                    </div>
+                </div>
+                <div class="day6 day">
+                    <div class="left-day">
+                        <p class="week-day"></p>
+                        <img src="" alt="" class="sky">
+                    </div>
+                    <div class="right-day">
+                        <p class="max-temp"></p>
+                        <p class="min-temp"></p>
+                    </div>
+                </div>
+                <div class="day7 day">
+                    <div class="left-day">
+                        <p class="week-day"></p>
+                        <img src="" alt="" class="sky">
+                    </div>
+                    <div class="right-day">
+                        <p class="max-temp"></p>
+                        <p class="min-temp"></p>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 </body>
